fixed wrong font on no image-page info

--- a/app/assets/stylesheets/works.scss
+++ b/app/assets/stylesheets/works.scss
@@ -309,6 +309,7 @@ span.without-overview-text {
   height: auto;
 }
 .info-short-list {
+	font-family: "LinLibertine";
   padding-left: 0;
   list-style: none;
 }
